--- a/app/src/main/res/layout/homepage_rvkeranjang.xml
+++ b/app/src/main/res/layout/homepage_rvkeranjang.xml
@@ -6,8 +6,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginHorizontal="3dp"
+        android:layout_marginVertical="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:backgroundTint="@color/semiwhite"
@@ -21,7 +21,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"/>
             <androidx.cardview.widget.CardView
                 android:id="@+id/friwxconsimage"
                 android:layout_width="80dp"
