--- a/app/src/main/res/layout/fragment_keranjang.xml
+++ b/app/src/main/res/layout/fragment_keranjang.xml
@@ -158,18 +158,20 @@
             android:text="Pilih Semua"
             android:textSize="@dimen/hp.ukuranteksinfo"
             android:textColor="@color/dark_blue"/>
+
         <TextView
             android:id="@+id/dataxhargabelitotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/fkerxbtnbeli"
             android:text="Rp. Gratis"
-            android:textSize="@dimen/hp.ukuranteksinfo"
             android:textColor="@color/red"
-            android:textStyle="bold"/>
+            android:textSize="@dimen/hp.ukuranteksinfo"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/fkerxbtnbeli"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
         <Button
             android:id="@+id/fkerxbtnbeli"
             android:layout_width="match_parent"
