--- a/app/src/main/res/layout/fragment_splash_selesai.xml
+++ b/app/src/main/res/layout/fragment_splash_selesai.xml
@@ -18,12 +18,13 @@
         <ImageView
             android:id="@+id/ssfximage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/ssfxtext"
-            android:src="@drawable/logovincentbiru"/>
+            android:src="@drawable/logovincentbiru"
+            android:scaleType="centerCrop"/>
         <TextView
             android:id="@+id/ssfxtext"
             android:layout_width="wrap_content"
@@ -179,47 +180,64 @@
                 app:layout_constraintStart_toEndOf="@id/ssfxtxttransfer"
                 app:cardCornerRadius="5dp"
                 app:layout_constraintEnd_toEndOf="parent">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Salin"
-                android:layout_marginHorizontal="10dp"
-                android:textSize="@dimen/hp.ukuranteksinfo"
-                android:textColor="@color/dark_red"
-                android:fontFamily="@font/inter_medium"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Salin"
+                    android:layout_marginHorizontal="10dp"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/dark_red"
+                    android:fontFamily="@font/inter_medium"/>
             </androidx.cardview.widget.CardView>
-            <TextView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/ssfxbtnuploadimage"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="50dp"
+                android:backgroundTint="@color/semiwhite"
                 app:layout_constraintTop_toBottomOf="@id/ssfxtxttransfer"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/ssfxbtnchat"
-                android:text="Upload Gambar"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textColor="@color/dark_blue"/>
-            <TextView
+                app:cardCornerRadius="7dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kirim Bukti"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="20dp"
+                    android:textColor="@color/dark_blue"
+                    android:fontFamily="@font/inter_bold"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
                 android:id="@+id/ssfxbtnchat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="50dp"
+                android:backgroundTint="@color/semiwhite"
                 app:layout_constraintTop_toBottomOf="@id/ssfxtxttransfer"
                 app:layout_constraintStart_toEndOf="@id/ssfxbtnuploadimage"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Kirim Chat"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textColor="@color/dark_green"/>
+                app:cardCornerRadius="7dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Kirim Chat"
+                    android:layout_gravity="center"
+                    android:textSize="20dp"
+                    android:textColor="@color/dark_green"
+                    android:fontFamily="@font/inter_bold"/>
+            </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/ssfxbtnback"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="30dp"
+                android:padding="10dp"
                 app:layout_constraintTop_toBottomOf="@id/ssfxbtnuploadimage"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -227,7 +245,8 @@
                 android:text="Kembali"
                 android:gravity="center"
                 android:textSize="20dp"
-                android:textColor="@color/dark_red"/>
+                android:textColor="@color/dark_red"
+                android:fontFamily="@font/inter_bold"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
